# DIEM

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-python.yml  codeql-analysis-python.yml  release.yml
diem/: __init__.py
documents/: proof.tex
tests/: test_diem.py
